01. Introducción al curso y primera demo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS GRID</title>
-  <link ref="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <main>
